# graphshell

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KEYBINDINGS.md  LICENSE-APACHE  LICENSE-MIT  README.md  STANDALONE_EXTRACTION.md  app.rs  backtrace.rs  build.rs  crash_handler.rs  graph_app.rs  graph_app_tests.rs  graph_resources.rs  lib.rs  main.rs  panic_hook.rs  parser.rs  prefs.rs  running_app_state.rs  search.rs  test.rs  util.rs  webdriver.rs  window.rs
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.tmp/: issue174.md  issue175.md  issue176.md  macos_nightly_job.log.txt  open_issues.json
app/: action_surface.rs  arrangement_graph_bridge.rs  canvas_scene.rs  clip_capture.rs  focus_selection.rs  graph_app_types.rs  graph_cartography.rs  graph_layout.rs  graph_mutations.rs  graph_views.rs  history.rs  history_runtime.rs  intent_phases.rs  intents.rs  persistence.rs  persistence_facade.rs  renderer_id.rs  routing.rs  runtime_lifecycle.rs  runtime_ports.rs  sanctioned_writes_tests.rs  selection.rs  settings_persistence.rs  startup_persistence.rs  ux_navigation.rs  workbench_commands.rs  workbench_layout_policy.rs  workspace_commands.rs  workspace_routing.rs  workspace_state.rs
crates/graph-canvas/: Cargo.toml
crates/graph-canvas/src/: backend.rs  backend_vello.rs  camera.rs  derive.rs  engine.rs  geometry.rs  hit_test.rs  input.rs  interaction.rs  lib.rs  lod.rs  navigation.rs  node_style.rs  packet.rs  physics_config.rs  projection.rs  scene.rs  scene_composition.rs  scene_physics.rs  scene_region.rs  scripting.rs  simulate.rs
crates/graph-canvas/src/layout/: axial.rs  barnes_hut.rs  curves.rs  extras.rs  force_directed.rs  l_system.rs  mod.rs  penrose.rs  rapier_adapter.rs  registry.rs  semantic_embedding.rs  static_layouts.rs
crates/graph-cartography/: Cargo.toml
crates/graph-cartography/src/: lib.rs
crates/graph-memory/: Cargo.toml
crates/graph-memory/src/: lib.rs
crates/graph-tree/: Cargo.toml
crates/graph-tree/src/: graphlet.rs  layout.rs  lens.rs  lib.rs  member.rs  memory_policy.rs  nav.rs  parity.rs  query.rs  reconciliation.rs  topology.rs  tree.rs  ux.rs
crates/graph-tree/tests/: property_tests.rs
crates/graphshell/: Cargo.toml
crates/graphshell-client/: Cargo.toml
crates/graphshell-client/src/: lib.rs
crates/graphshell-comms/: Cargo.toml
crates/graphshell-comms/src/: capabilities.rs  identity.rs  lib.rs  misfin.rs  transport.rs  webfinger.rs
crates/graphshell-core/: Cargo.toml
crates/graphshell-core/src/: accessibility.rs  actions.rs  address.rs  async_host.rs  async_request.rs  color.rs  content.rs  geometry.rs  host_event.rs  intents.rs  lib.rs  overlay.rs  pane.rs  persistence.rs  routing.rs  signal_router.rs  time.rs  types.rs  ux_diagnostics.rs  ux_observability.rs  ux_probes.rs  verso_address.rs  viewer_host.rs
crates/graphshell-core/src/graph/: apply.rs  facet_projection.rs  filter.rs  identity.rs  mod.rs  node.rs
crates/graphshell-core/src/shell_state/: authorities.rs  command_palette.rs  command_surface_telemetry.rs  frame_model.rs  host_intent.rs  mod.rs  omnibar.rs  toolbar.rs
crates/graphshell-endpoint/: Cargo.toml
crates/graphshell-endpoint/src/: lib.rs
crates/graphshell-iced-widgets/: Cargo.toml
crates/graphshell-iced-widgets/src/: animation.rs  context_menu.rs  lib.rs  modal.rs  tile_tabs.rs  tokens.rs
crates/graphshell-protocol/: Cargo.toml
crates/graphshell-protocol/src/: lib.rs
crates/graphshell-runtime/: Cargo.toml
crates/graphshell-runtime/src/: content_surface.rs  finalize_actions.rs  frame_inbox.rs  frame_projection.rs  lib.rs  portable_time.rs  ports.rs  rendering_context_producer.rs  webview_backpressure.rs
crates/graphshell-runtime/src/system/: mod.rs  signal_bus.rs
crates/graphshell-stdio/: Cargo.toml
crates/graphshell-stdio/src/: lib.rs
crates/graphshell/src/: canary.rs  lib.rs  resume.rs  sessions.rs  view.rs
crates/iced-graph-canvas-viewer/: Cargo.toml
crates/iced-graph-canvas-viewer/examples/: demo.rs
crates/iced-graph-canvas-viewer/src/: lib.rs  painter.rs
crates/iced-middlenet-viewer/: Cargo.toml
crates/iced-middlenet-viewer/examples/: demo.rs
crates/iced-middlenet-viewer/src/: lib.rs
crates/iced-wry-viewer/: Cargo.toml
crates/iced-wry-viewer/examples/: demo.rs
crates/iced-wry-viewer/src/: lib.rs
crates/middlenet-adapters/: Cargo.toml
crates/middlenet-adapters/src/: lib.rs
crates/middlenet-engine/: Cargo.toml
crates/middlenet-engine/src/: adapters.rs  capabilities.rs  compositor.rs  document.rs  dom.rs  engine.rs  identity.rs  layout.rs  lib.rs  misfin.rs  script.rs  source.rs  style.rs  transport.rs  viewer.rs  webfinger.rs
crates/middlenet-netrender-bridge/: Cargo.toml
crates/middlenet-netrender-bridge/examples/: smoke_html_paint.rs  smoke_iced_image.rs  smoke_iced_shader.rs  smoke_one_rect.rs  smoke_parley.rs  smoke_render_scene.rs
crates/middlenet-netrender-bridge/src/: html_paint.rs  lib.rs
crates/registrar/register-lens/: Cargo.toml
crates/registrar/register-lens/src/: layout.rs  lib.rs  physics.rs  registry.rs  theme.rs
crates/registrar/register-mod-loader/: Cargo.toml
crates/registrar/register-mod-loader/src/: lib.rs  loader.rs
crates/registrar/register-viewer/: Cargo.toml
crates/registrar/register-viewer/src/: lib.rs
crates/verso/: Cargo.toml
crates/verso-host/: Cargo.toml
crates/verso-host/src/: async_spawner.rs  lib.rs  renderer.rs  viewer_surface_host.rs
crates/verso/src/: content_accessibility_producer.rs  host_gpu_port.rs  lib.rs
crates/verso/src/wry_engine/: frame_source.rs  manager.rs  mod.rs  types.rs
design_docs/: 2026-03-14_documentation_compression_plan.md  2026-05-03_lexicon_brief.md  AI_USAGE.md  DOC_POLICY.md  DOC_README.md  OPERATOR_GUIDE.md  PROJECT_DESCRIPTION.md  TERMINOLOGY.md
desktop/: .diagnostics.rs.pending-snap  app.rs  cli.rs  control_panel.rs  diagnostics.rs  dialog.rs  dialog_panels.rs  embedder.rs  event_loop.rs  gamepad.rs  graph_search_flow.rs  graph_search_ui.rs  gui.rs  gui_frame.rs  gui_tests.rs  headed_window.rs  headless_window.rs  (+20 more)
(+1230 files in other folders)
