[package]
name = "graphshell"
build = "build.rs"
version = "0.0.1"
authors = ["@mark-ik"]
license = "MPL-2.0"
edition = "2024"
readme = "README.md"
publish = false
rust-version = "1.92.0"

[workspace]
members = [
    "crates/graph-canvas",
    "crates/graph-cartography",
    "crates/graph-memory",
    "crates/graph-tree",
    "crates/graphshell-core",
    "crates/graphshell-runtime",
    "crates/middlenet-core",
    "crates/middlenet-adapters",
    "crates/middlenet-render",
    "crates/middlenet-engine",
    "crates/iced-middlenet-viewer",
    "crates/iced-graph-canvas-viewer",
    "crates/iced-wry-viewer",
    "crates/verso",
    "crates/verso-host",
]

[lib]
name = "graphshell"
path = "lib.rs"
bench = false

[[bin]]
name = "graphshell"
path = "main.rs"
bench = false

[lints.rust]
# These are not official flags but still used for testing and pgo.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(llvm_pgo)'] }

# Some of these dependencies are only needed for a specific target OS, but
# since build-scripts can't detect the Cargo target OS at build-time, we
# must unconditionally add these dependencies. See https://github.com/rust-lang/cargo/issues/4932
[build-dependencies]
# macOS only
cc = "1.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "GraphShell Browser"
LegalCopyright = "Copyright (C) 2024 The GraphShell Authors"
OriginalFilename = "graphshell.exe"
ProductName = "GraphShell Browser"

[features]
default = ["servo-engine", "gamepad", "servo/clipboard", "js_jit", "max_log_level", "webgpu", "webxr", "diagnostics", "wry", "ux-probes", "ux-bridge"]
diagnostics = []
diagnostics_tests = []
ux-semantics = []
ux-probes = ["ux-semantics"]
ux-bridge = ["ux-semantics"]
test-utils = ["ux-probes", "ux-bridge", "graphshell-core/test-utils"]
# 2026-04-25 servo-into-verso lane (S2): graphshell main's servo
# dep is now optional and gated behind this feature, which also
# activates `verso/servo-engine` so verso owns the dep ownership
# per VERSO_AS_PEER.md. All previously-existing servo-forwarded
# features (gamepad, webgpu, etc.) require `servo-engine` so
# they pull in the dep transitively. To build without Servo:
# `cargo build --no-default-features --features iced-host,wry,…`.
servo-engine = ["dep:servo", "verso/servo-engine"]
crown = ["servo-engine", "servo/crown"]
debugmozjs = ["servo-engine", "servo/debugmozjs"]
gamepad = ["servo-engine", "servo/gamepad"]
jitspew = ["servo-engine", "servo/jitspew"]
js_backtrace = ["servo-engine", "servo/js_backtrace"]
js_jit = ["servo-engine", "servo/js_jit"]
max_log_level = ["log/release_max_level_info"]
media-gstreamer = ["servo-engine", "servo/media-gstreamer"]
native-bluetooth = ["servo-engine", "servo/native-bluetooth"]
profilemozjs = ["servo-engine", "servo/profilemozjs"]
refcell_backtrace = ["servo-engine", "servo/refcell_backtrace"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "servo-engine", "servo/tracing"]
tracing-hitrace = ["tracing", "dep:hitrace"]
tracing-perfetto = ["tracing", "dep:tracing-perfetto"]
vello = ["servo-engine", "servo/vello"]
webgl_backtrace = ["servo-engine", "servo/webgl_backtrace"]
webgpu = ["servo-engine", "servo/webgpu"]
webxr = ["servo-engine", "servo/webxr"]
wry = ["dep:wry", "verso/wry-engine"]
pdf = ["dep:pdfium-render"]
audio = ["dep:symphonia", "dep:rodio"]
# M5 scaffolding: gate an iced-backed host adapter behind this feature.
# Currently stands up a placeholder `IcedHost` + `IcedHostPorts` that
# implement the `HostPorts` trait bundle; M5.1 adds the real iced crate
# dep so `IcedHost` can grow an iced `Program`-shaped surface next.
iced-host = [
    "dep:iced",
    "dep:iced-middlenet-viewer",
    "dep:iced-graph-canvas-viewer",
    "dep:iced-wry-viewer",
    "wry",
]

[dependencies]
middlenet-engine = { path = "crates/middlenet-engine" }
verso = { path = "crates/verso" }
verso-host = { path = "crates/verso-host" }
graphshell-comms = { path = "crates/graphshell-comms" }
graphshell-runtime = { path = "crates/graphshell-runtime" }
accesskit = { version = "0.24.0", features = ["serde"] }
bpaf = { version = "0.9.24", features = ["derive"] }
backon = "1"
cfg-if = "1.0.4"
crossbeam-channel = "0.5"
dpi = "0.1"
euclid = "0.22"
inventory = "0.3"
infer = "0.19"
hitrace = { version = "0.1.6", features = ["api-19", "tracing-rs"], optional = true }
# M5: iced is the second host backend. Pulled only under the `iced-host`
# feature; egui remains the default host until M5/M6 reach parity.
iced = { version = "0.14", optional = true, features = ["canvas"] }
# Iced middlenet viewer lives in its own crate so it can be developed,
# tested, and demoed without pulling in the heavy Servo/webrender deps
# of the main graphshell crate. The graphshell-side host adapter
# re-exports + Element-maps the viewer's events into iced_app::Message.
iced-middlenet-viewer = { path = "crates/iced-middlenet-viewer", optional = true }
# Iced graph canvas viewer (extracted 2026-04-25). Same portability
# rationale as iced-middlenet-viewer: pulls only `iced + graph-canvas
# + graphshell-core`, can be developed/tested/demoed without Servo
# or webrender. The graphshell-side host adapter wraps it and
# Element-maps the viewer's `GraphCanvasMessage` into iced_app::Message.
iced-graph-canvas-viewer = { path = "crates/iced-graph-canvas-viewer", optional = true }
# Iced wry viewer (extracted 2026-04-25, Phase B). Mounts wry::WebView
# overlays as children of the iced window using the raw-window-handle
# extracted via `iced::window::run`. Depends on `verso/wry-engine`
# (Phase A2 — verso owns the wry impl).
iced-wry-viewer = { path = "crates/iced-wry-viewer", optional = true }
image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
keyboard-types = { version = "0.8.3", features = ["serde", "webdriver"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
libc = "0.2"
servo = { path = "../servo-wgpu/components/servo", features = ["background_hang_monitor", "bluetooth", "testbinding", "wgpu_backend"], default-features = false, optional = true }
log = "0.4.29"
mime_guess = "2.0.5"
raw-window-handle = "0.6"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.21"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# Runtime caches are currently reducer-thread/short lookup paths.
# If async task paths begin doing cache population directly, prefer `moka` `future` feature there.
moka = { version = "0.12", features = ["sync"] }
toml = "0.8"
tower = "0.5"
http = "1.4"
tracing = { version = "0.1.44", optional = true }
tracing-perfetto = { version = "0.1.5", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true, features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
rand = "0.8"
rand_09 = { package = "rand", version = "0.9" }
webdriver_server = { path = "../servo-wgpu/components/webdriver_server", package = "servo-webdriver-server" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = "0.21.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
backtrace = "0.3"

[target.'cfg(target_env = "ohos")'.dependencies]
env_filter = "0.1.4"
euclid = "0.22"
hilog = "0.2.2"
# force inprocess until we add multi-process support for ohos
ipc-channel = { version = "0.21", features = ["force-inprocess"] }
napi-derive-ohos = "1.1.6"
napi-ohos = "1.1.6"
ohos-abilitykit-sys = { version = "0.1.5", features = ["api-14"] }
ohos-deviceinfo = "0.1.0"
ohos-ime = "0.4.2"
ohos-ime-sys = "0.2.3"
ohos-vsync = "0.1.3"
ohos-window-manager-sys = { version = "0.1", features = ["api-14"] }
xcomponent-sys = { version = "0.3.5", features = ["api-14", "keyboard-types"] }

[target.'cfg(any(target_os = "android", target_env = "ohos"))'.dependencies]
base = { path = "../servo-wgpu/components/shared/base", package = "servo-base" }
nix = { version = "0.30", features = ["fs"] }
serde_json = "1.0"
surfman = { version = "0.12.0", features = ["sm-angle-default", "chains"] }

[target.'cfg(not(any(target_os = "android", target_env = "ohos", target_os = "ios")))'.dependencies]
dirs = "6.0"
egui = "0.34.1"
egui-file-dialog = "0.13.0"
egui-winit = { version = "0.34.1", default-features = false, features = ["accesskit", "clipboard", "wayland"] }
egui-wgpu = { version = "0.34.1", features = ["winit", "wayland"] }
egui_tiles = { version = "0.15.0", features = ["serde"] }
graph-canvas = { path = "crates/graph-canvas" }
graph-cartography = { path = "crates/graph-cartography" }
graph-tree = { path = "crates/graph-tree" }
graphshell-core = { path = "crates/graphshell-core" }
egui-notify = "0.22.0"
arboard = "3"
nucleo = "0.5.0"
parking_lot = "0.12"
petgraph = { version = "0.8.3", features = ["serde-1"] }
parry2d = "0.26"
rstar = "0.12"
fjall = "3"
redb = "3"
rkyv = { version = "0.8", features = ["std"] }
aes-gcm = "0.10.3"
cid = "0.11"
multihash = "0.19"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
sha2 = "0.10"
keyring = "3"
nostr = { version = "0.44.2", features = ["nip44"] }
zstd = "0.13"
iroh = "0.97"
qrcode = "0.14"
base64 = "0.22"
mdns-sd = "0.12"
gilrs = "0.11.1"
headers = "0.4"
serde_json = "1.0"
sysinfo = "0.37"
extism = "1.21.0"
wasmparser = "0.240.0"
pollster = "0.4.0"
# For optional feature servo_allocator/use-system-allocator and servo_allocator/allocation-tracking
servo_allocator = { path = "../servo-wgpu/components/allocator", package = "servo-allocator" }
surfman = { version = "0.12.0", features = ["sm-raw-window-handle-06", "sm-x11", "chains"] }
winit = "0.30.13"
wry = { version = "0.55", optional = true }
pdfium-render = { version = "0.8", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["mp3", "ogg", "flac", "wav", "aac"] }
rodio = { version = "0.20", optional = true, default-features = false }

[target.'cfg(any(all(target_os = "linux", not(target_env = "ohos")), target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
servo = { path = "../servo-wgpu/components/servo", features = ["no-wgl"], optional = true }
webview2-com = "0.38.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
] }

[dev-dependencies]
base = { path = "../servo-wgpu/components/shared/base", package = "servo-base" }
graphshell-comms = { path = "crates/graphshell-comms", features = ["test-support"] }
graphshell-core = { path = "crates/graphshell-core", features = ["test-utils"] }
insta = "1"
proptest = "1"
rstest = "0.26"
tempfile = "3"
tracing = "0.1.44"
tracing-test = "0.2"
inventory = "0.3"
wat = "1"

[patch.crates-io]
webrender = { path = "../webrender-wgpu/webrender" }
webrender_api = { path = "../webrender-wgpu/webrender_api" }
wr_malloc_size_of = { path = "../webrender-wgpu/wr_malloc_size_of" }

# Servo-wgpu's Cargo.toml has this same patch, but `[patch]` sections
# only take effect from the root manifest. Graphshell is the root when
# we build, so we need to duplicate the redirect or cargo will pull
# the old wgpu-28-based git revision alongside the local wgpu-29 path,
# producing "two different versions of wgpu" type errors.
[patch."https://github.com/mark-ik/wgpu-gui-bridge"]
servo-wgpu-interop-adapter = { path = "../wgpu-gui-bridge/servo-wgpu-interop-adapter" }
wgpu-native-texture-interop = { path = "../wgpu-gui-bridge/wgpu-native-texture-interop" }

[[test]]
name = "scenarios"
path = "tests/scenarios/main.rs"
required-features = ["test-utils"]


