[package]
name = "graphshell"
build = "build.rs"
version = "0.0.1"
authors = ["@mark-ik"]
license = "MPL-2.0"
edition = "2024"
readme = "README.md"
publish = false
rust-version = "1.92.0"

[workspace]
exclude = ["vendor"]
members = [
    "crates/graph-canvas",
    "crates/graph-cartography",
    "crates/graph-memory",
    "crates/graph-tree",
    "crates/graphshell-comms",
    "crates/graphshell-core",
    "crates/graphshell-runtime",
    "crates/middlenet-core",
    "crates/middlenet-adapters",
    "crates/middlenet-gopher",
    "crates/middlenet-render",
    "crates/middlenet-engine",
    "crates/iced-middlenet-viewer",
    "crates/iced-graph-canvas-viewer",
    "crates/iced-wry-viewer",
    "crates/graphshell-iced-widgets",
    "crates/verso",
    "crates/verso-host",
]

[lib]
name = "graphshell"
path = "lib.rs"
bench = false

[[bin]]
name = "graphshell"
path = "main.rs"
bench = false

[lints.rust]
# These are not official flags but still used for testing and pgo.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)', 'cfg(llvm_pgo)'] }

# Some of these dependencies are only needed for a specific target OS, but
# since build-scripts can't detect the Cargo target OS at build-time, we
# must unconditionally add these dependencies. See https://github.com/rust-lang/cargo/issues/4932
[build-dependencies]
# macOS only
cc = "1.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.winresource]
FileDescription = "GraphShell Browser"
LegalCopyright = "Copyright (C) 2024 The GraphShell Authors"
OriginalFilename = "graphshell.exe"
ProductName = "GraphShell Browser"

[features]
default = ["iced-host", "max_log_level", "diagnostics", "ux-probes", "ux-bridge"]
diagnostics = []
diagnostics_tests = []
ux-semantics = []
ux-probes = ["ux-semantics"]
ux-bridge = ["ux-semantics"]
webdriver = ["dep:webdriver_server"]
test-utils = ["ux-probes", "ux-bridge", "graphshell-core/test-utils"]
# Legacy marker retained so existing `#[cfg(feature = "egui-host")]`
# gates remain syntactically recognized while the egui stack itself
# stays removed from the dependency graph.
egui-host = []
# 2026-04-25 servo-into-verso lane (S2): graphshell main's servo
# dep is now optional and gated behind this feature, which also
# activates `verso/servo-engine` so verso owns the dep ownership
# per VERSO_AS_PEER.md. Servo-forwarded features require
# `servo-engine` so they pull in the dep transitively. To build without Servo:
# `cargo build --no-default-features --features iced-host,wry,…`.
servo-engine = ["dep:servo", "verso/servo-engine"]
js_jit = ["servo-engine", "servo?/js_jit"]
max_log_level = ["log/release_max_level_info"]
tracing = ["dep:tracing", "dep:tracing-subscriber", "servo-engine", "servo?/tracing"]
tracing-hitrace = ["tracing", "dep:hitrace"]
tracing-perfetto = ["tracing", "dep:tracing-perfetto"]
wry = ["dep:wry", "verso/wry-engine"]
pdf = ["dep:pdfium-render"]
audio = ["dep:symphonia", "dep:rodio"]
# Iced is now the only live host lane in graphshell main.
iced-host = [
    "dep:iced",
    "dep:iced-middlenet-viewer",
    "dep:iced-graph-canvas-viewer",
    "dep:iced-wry-viewer",
    "dep:graphshell-iced-widgets",
    "wry",
]

[dependencies]
middlenet-engine = { path = "crates/middlenet-engine" }
verso = { path = "crates/verso" }
verso-host = { path = "crates/verso-host" }
graphshell-comms = { path = "crates/graphshell-comms" }
graphshell-runtime = { path = "crates/graphshell-runtime" }
accesskit = { version = "0.24.0", features = ["serde"] }
bpaf = { version = "0.9.24", features = ["derive"] }
backon = "1"
cfg-if = "1.0.4"
crossbeam-channel = "0.5"
dpi = "0.1"
euclid = "0.22"
inventory = "0.3"
infer = "0.19"
hitrace = { version = "0.1.6", features = ["api-19", "tracing-rs"], optional = true }
# Iced is the sole supported host backend in graphshell main.
# `tokio` feature enables `iced::time::every` (the runtime-tick
# Subscription used by the iced host's frame loop). graphshell already
# depends on tokio at the workspace level, so this is a consistent
# choice over `smol`.
iced = { path = "vendor/iced", optional = true, features = ["canvas", "tokio"] }
# Iced middlenet viewer lives in its own crate so it can be developed,
# tested, and demoed without pulling in the heavy Servo/webrender deps
# of the main graphshell crate. The graphshell-side host adapter
# re-exports + Element-maps the viewer's events into iced_app::Message.
iced-middlenet-viewer = { path = "crates/iced-middlenet-viewer", optional = true }
# Iced graph canvas viewer (extracted 2026-04-25). Same portability
# rationale as iced-middlenet-viewer: pulls only `iced + graph-canvas
# + graphshell-core`, can be developed/tested/demoed without Servo
# or webrender. The graphshell-side host adapter wraps it and
# Element-maps the viewer's `GraphCanvasMessage` into iced_app::Message.
iced-graph-canvas-viewer = { path = "crates/iced-graph-canvas-viewer", optional = true }
# Iced wry viewer (extracted 2026-04-25, Phase B). Mounts wry::WebView
# overlays as children of the iced window using the raw-window-handle
# extracted via `iced::window::run`. Depends on `verso/wry-engine`
# (Phase A2 — verso owns the wry impl).
iced-wry-viewer = { path = "crates/iced-wry-viewer", optional = true }
# Hand-rolled iced widgets (TileTabs, Modal, ContextMenu) per the
# 2026-04-30 decision to drop the `iced_aw` dependency. Slice 1
# scaffolding of the iced jump-ship plan: signature-only widget
# shells; Widget impls land in S4 sub-slices.
graphshell-iced-widgets = { path = "crates/graphshell-iced-widgets", optional = true }
image = { version = "0.25", default-features = false, features = ["avif", "rayon", "bmp", "gif", "ico", "jpeg", "png", "webp"] }
keyboard-types = { version = "0.8.3", features = ["serde", "webdriver"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd"] }
libc = "0.2"
servo = { path = "../servo-wgpu/components/servo", features = ["background_hang_monitor", "baked-in-resources", "wgpu_backend"], default-features = false, optional = true }
log = "0.4.29"
mime_guess = "2.0.5"
raw-window-handle = "0.6"
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
roxmltree = "0.21"
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net"] }
tokio-util = "0.7"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
# Runtime caches are currently reducer-thread/short lookup paths.
# If async task paths begin doing cache population directly, prefer `moka` `future` feature there.
moka = { version = "0.12", features = ["sync"] }
toml = "0.8"
tower = "0.5"
http = "1.4"
tracing = { version = "0.1.44", optional = true }
tracing-perfetto = { version = "0.1.5", optional = true }
tracing-subscriber = { version = "0.3.23", optional = true, features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.23.0", features = ["serde", "v4", "v5"] }
rand = "0.8"
rand_09 = { package = "rand", version = "0.9" }
webdriver_server = { path = "../servo-wgpu/components/webdriver_server", package = "servo-webdriver-server", optional = true }
backtrace = "0.3"
dirs = "6.0"
graph-canvas = { path = "crates/graph-canvas" }
graph-cartography = { path = "crates/graph-cartography" }
graph-tree = { path = "crates/graph-tree" }
graphshell-core = { path = "crates/graphshell-core" }
arboard = "3"
nucleo = "0.5.0"
parking_lot = "0.12"
petgraph = { version = "0.8.3", features = ["serde-1"] }
parry2d = "0.26"
rstar = "0.12"
fjall = "3"
redb = "3"
rkyv = { version = "0.8", features = ["std"] }
aes-gcm = "0.10.3"
cid = "0.11"
multihash = "0.19"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core"] }
secp256k1 = { version = "0.31", features = ["rand", "global-context"] }
sha2 = "0.10"
keyring = "3"
nostr = { version = "0.44.2", features = ["nip44"] }
zstd = "0.13"
iroh = "0.97"
qrcode = "0.14"
base64 = "0.22"
mdns-sd = "0.12"
headers = "0.4"
serde_json = "1.0"
sysinfo = "0.37"
extism = "1.21.0"
wasmparser = "0.240.0"
pollster = "0.4.0"
winit = "0.30.13"
wry = { version = "0.55", optional = true }
pdfium-render = { version = "0.9", optional = true }
symphonia = { version = "0.5", optional = true, default-features = false, features = ["mp3", "ogg", "flac", "wav", "aac"] }
rodio = { version = "0.20", optional = true, default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
sig = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
servo = { path = "../servo-wgpu/components/servo", features = ["no-wgl"], default-features = false, optional = true }
webview2-com = "0.38.2"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSColorSpace",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
] }

[dev-dependencies]
base = { path = "../servo-wgpu/components/shared/base", package = "servo-base" }
graphshell-comms = { path = "crates/graphshell-comms", features = ["test-support"] }
graphshell-core = { path = "crates/graphshell-core", features = ["test-utils"] }
insta = "1"
proptest = "1"
rstest = "0.26"
tempfile = "3"
tracing = "0.1.44"
tracing-test = "0.2"
inventory = "0.3"
wat = "1"

[patch.crates-io]
gpu-allocator = { path = "../servo-wgpu/support/patches/gpu-allocator" }
# Webrender patches gated off (2026-04-30) — the iced-only build path
# does not pull `webrender` transitively, and the sibling
# `../webrender-wgpu/` tree no longer exposes a `webrender/` directory
# (Netrender rename in flight per the project_naming_state notes;
# `netrender/` is the new name in that tree). The Servo build path
# (`--features servo-engine`) is independently blocked on the
# wgpu/webrender API mismatch documented in the iced jump-ship plan
# §3.4, so re-enabling these patches gains nothing today. Re-enable
# (and update the `webrender → netrender` path) once the Servo path
# is unblocked. Alternative: pull down the prior SPIR-V pipeline
# branch of webrender-wgpu and point at that directory.
# webrender = { path = "../webrender-wgpu/webrender" }
# webrender_api = { path = "../webrender-wgpu/webrender_api" }
# wr_malloc_size_of = { path = "../webrender-wgpu/wr_malloc_size_of" }

# Servo-wgpu's Cargo.toml has this same patch, but `[patch]` sections
# only take effect from the root manifest. Graphshell is the root when
# we build, so we need to duplicate the redirect or cargo will pull
# the old wgpu-28-based git revision alongside the local wgpu-29 path,
# producing "two different versions of wgpu" type errors.
[patch."https://github.com/mark-ik/wgpu-gui-bridge"]
servo-wgpu-interop-adapter = { path = "../wgpu-gui-bridge/servo-wgpu-interop-adapter" }
wgpu-native-texture-interop = { path = "../wgpu-gui-bridge/wgpu-native-texture-interop" }

[patch."https://github.com/iced-rs/cryoglyph.git"]
cryoglyph = { path = "vendor/cryoglyph" }

[[test]]
name = "scenarios"
path = "tests/scenarios/main.rs"
required-features = ["test-utils"]


