[workspace]
resolver = "3"
members = [
    "crates/graphshell-protocol",
    "crates/graphshell-client",
    "crates/graphshell-endpoint",
    "crates/graphshell",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-ik/graphshell"
authors = ["Mark AB (markik)"]

[workspace.dependencies]
sceno = { git = "https://github.com/mark-ik/scenograph.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
