[package]
name = "graph-canvas"
version = "0.0.1"
authors = ["@mark-ik"]
license = "MPL-2.0"
edition = "2024"
publish = false
rust-version = "1.92.0"
description = "Framework-agnostic graph-view canvas: scene derivation, camera, projection, interaction, hit testing, and render-packet derivation for Graphshell"

[features]
default = []
vello = ["dep:vello", "dep:peniko"]
physics = ["dep:parry2d"]
simulate = ["physics", "dep:rapier2d"]

[dependencies]
euclid = { version = "0.22", features = ["serde"] }
parry2d = { version = "0.26", optional = true }
peniko = { version = "0.5", optional = true }
rapier2d = { version = "0.32", optional = true, features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vello = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
serde_json = "1.0"
