[package]
name = "graph-cartography"
version = "0.0.1"
authors = ["@mark-ik"]
license = "MPL-2.0"
edition = "2024"
publish = false
rust-version = "1.92.0"
description = "Workspace-scoped aggregate and cache layer for Graphshell graph memory"

[dependencies]
graph-memory = { path = "../graph-memory" }
graphshell-core = { path = "../graphshell-core" }
serde = { version = "1.0", features = ["derive"] }