[package]
name = "graph-memory"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false
description = "Owner-scoped graph memory model for Graphshell"

[dependencies]
rkyv = { version = "0.8", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
slotmap = { version = "1.0", features = ["serde"] }
