[package]
name = "graph-tree"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
publish = false
description = "Framework-agnostic graphlet-native tile tree for Graphshell"

[features]
default = []
petgraph = ["dep:petgraph"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
taffy = "0.7"
petgraph = { version = "0.8", features = ["serde-1"], optional = true }

[dev-dependencies]
serde_json = "1.0"
proptest = "1.6"
