[package]
name = "graphshell-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Transport-independent local curation state for Graphshell."

[dependencies]
graphshell-protocol = { path = "../graphshell-protocol" }
sceno.workspace = true
