[package]
name = "graphshell-comms"
version = "0.0.1"
edition = "2024"

[dependencies]
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "aws-lc-rs"] }
rcgen = "0.13"
url = "2.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
nostr = { version = "0.44.2", features = ["nip44"] }
tempfile = "3"
dirs = "5.0"
middlenet-engine = { path = "../middlenet-engine" }
