[package]
name = "graphshell-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Versioned carrier-neutral projection messages for Graphshell."

[dependencies]
sceno.workspace = true
serde.workspace = true
serde_json.workspace = true
