[package]
name = "graphshell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Graphshell facade; the presentation host arrives after loopback proof."

[dependencies]
graphshell-client = { path = "../graphshell-client" }
graphshell-endpoint = { path = "../graphshell-endpoint" }
graphshell-protocol = { path = "../graphshell-protocol" }
