[package]
name = "iced-wry-viewer"
version = "0.0.1"
authors = ["@mark-ik"]
license = "MPL-2.0"
edition = "2024"
publish = false
rust-version = "1.92.0"
description = "Iced widget that mounts a wry::WebView as a child of the iced window. Per-platform overlay-region positioning sync."

[dependencies]
iced = { path = "../../../iced-wgpu29", features = ["canvas"] }
verso = { path = "../verso", features = ["wry-engine"] }
log = "0.4"
raw-window-handle = "0.6"

[[example]]
name = "demo"
path = "examples/demo.rs"
