[package]
name = "middlenet-adapters"
version = "0.0.1"
edition = "2024"

[dependencies]
middlenet-core = { path = "../middlenet-core" }
middlenet-feed = { path = "../middlenet-feed" }
middlenet-gopher = { path = "../middlenet-gopher" }
middlenet-markdown = { path = "../middlenet-markdown" }
middlenet-plain-text = { path = "../middlenet-plain-text" }

[lib]
path = "src/lib.rs"
